# Ballot_processing

./: 1959.py  1979.py  1999.xlsx  Byulleteni_polzovateley.xlsx  README.md  main  main.py  pyproject.toml
1979/: 1979.py
genres/criminal/: Criminal.xlsx  Results_Criminal.xlsx  criminal.py
genres/film_noir/: Noir.xlsx
years/1959/: 1959.py  1959.xlsx
years/1989/: 1989.py  1989.xlsx
years/2022/: 2022.py  2022_new.xlsx
