[tool.poetry]
name = "ballot-processing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ballot_processing"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
